--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 db:
   image: postgres
+
 web:
-  build: .
-  command: python manage.py runserver 0.0.0.0:8000
+  build: . # Default Dockerfile
+  command: /app/run_web.sh
   volumes:
-    - .:/code
+    - .:/app
   ports:
     - "8000:8000"
   links:
